added email/pass login for apple test account
